manifests/07-blog-back-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-back-nginx
  namespace: lab-k8s
  labels:
    app.kubernetes.io/name: blog-back-nginx
    app.kubernetes.io/part-of: blog-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: blog-back-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: blog-back-nginx
        app.kubernetes.io/part-of: blog-back
    spec:
      nodeSelector:
        kubernetes.io/hostname: rke2-worker-2
      imagePullSecrets:
        - name: kuberneteshub
      containers:
        - name: nginx
          image: kareemdev2/blog-back-nginx:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
            - name: assets
              mountPath: /app/public/build
            - name: uploads
              mountPath: /app/public/uploads/images
      volumes:
        - name: nginx-config
          configMap:
            name: blog-back-nginx-config
        - name: assets
          persistentVolumeClaim:
            claimName: blog-back-assets
        - name: uploads
          persistentVolumeClaim:
            claimName: blog-back-uploads
